fix: spacing on table fix: calculation not accounting for elapsed time feat: add toggle api key button

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
 .app {
   margin: 2rem;
 }
+
+th {
+  text-align: left;
+  padding-right: 1rem;
+}
+
+td {
+  text-align: left;
+  padding-right: 1rem;
+}
+
